@@ -1,6 +1,7 @@
 0.3.4+ (in development)
 ------------------------------------------------------------------------
 - Fix: [#15028] Crash when placing large scenery.
+- Fix: [#15052] Crash when using banner window.
 - Improved: [#12626] Allow using RCT2 saves to mark RCT Classic (.sea) parks as finished and vice versa. 
 
 0.3.4 (2021-07-19)
